--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,28 @@
-*{
-    padding: 0;
-    margin: 0;
-    max-width: 100%;
-    overflow-x: hidden;
-    position:relative;
-    display: block;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+
+:root{
+    --primary-color:#DC2626;
+    --text:white;
 }
+
+body{
+    font-family: 'Noto Sans JP', sans-serif;
+    margin: 0;
+    font-size:1.2rem;
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: flex-end;
+    background-color:var(--primary-color) ;
+    color:var(--text);
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    
+}
+
+.nav-item{
+    padding:0.5rem 1rem;
+    cursor: pointer;
+}
+
