--- a/styles.css
+++ b/styles.css
@@ -67,5 +67,7 @@ body{
     border:2px solid black;
     height:2rem;
     width:300px;
-    padding:2rem;
+    text-align: center;
+    font-size: 1.5rem;
+    padding:0.5rem 0rem;
 }
